Collapsing behauviour improved. Navbar collapsin animation. Fixed separator height.

--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -10,18 +10,17 @@
 	align-items: center;
 
 	@include respond-to(vertical-layout) { width: 80%; }
-	@include respond-to(vertical-layout) { max-height: 20%; }
+	@include respond-to(vertical-layout) { max-height: 20%; height: 13%; }
 	margin: calc(3% + 0.3rem);
 	
 	text-align: center;
 	
 	overflow: hidden;
-	@include transition(max-width 1s, max-height 1s, margin 1s);
-
+	@include transition(max-height 1s, margin 1s);
 }
 
 .logo{
-	min-width: 6.5rem;
+	min-width: 5rem;
 	object-fit:contain;
 	width: 100%;
 	height: 100%;
@@ -30,6 +29,7 @@
 .header-separator {
 	width: 70%;
 	margin: calc(10% + 1rem) 0;
+	
 	@include respond-to(vertical-layout) { margin: 0 calc(10% + 1rem);
 												width: 0; height: 70%;}
 }
@@ -42,7 +42,7 @@
 	
 	max-height: 100%;
 	
-	min-width: 6.5rem;
+	min-width: 4rem;
 	width: 100%;
 	height: 100%;
 	margin: 0;
